sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n: Int=getNombreValeurs();
  var a: Int=1;
  while(a==1)
  {
    a=0;
  	var i: Int=0;
    while(i<n)
    {
    	if(getValeur(i)>getValeur(i+1))
    	{
      	echange(i,j);
      	a=1;
    	}
      i=i+1;
    }
    
  }
}
